# android_rust_gpgpu

./: build.gradle  gradle.properties  local.properties  settings.gradle
app/src/androidTest/java/com/example/gpgpu/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/gpgpu/: Bench.kt  MainActivity.kt
app/src/main/java/com/example/gpgpu/calc/: CpuProcessor.kt  GpuProcessor.kt  Processor.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/gpgpu/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  cargo-config.toml
rust/program/compiled/: pow.cs.spirv
rust/program/txt/: pow2.cs.glsl
rust/shader_compiler/: Cargo.toml
rust/shader_compiler/src/: main.rs
rust/src/: ctx.rs  defs.rs  lib.rs
