
[package]
name = "rust"
version = "0.0.1"
authors = ["Aleksei Murzanev <alex_murz@icloud.com>"]
edition = "2018"
publish = false

[dependencies]

# Vulkan API library (not direct bindings)
vulkano = "0.19.0"

#[target.'cfg(target_os="android")'.dependencies]
jni = "0.15.0"

[lib]
path = "./src/lib.rs"
name = "rust"
crate-type = ["cdylib"]
